--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -15,24 +16,24 @@
         android:theme="@style/Theme.TeknoLost"
         tools:targetApi="31">
         <activity
+            android:name=".SplashPage"
+            android:exported="false" />
+        <activity
             android:name=".Register"
-            android:exported="false" >
-
-
-    </activity>
+            android:exported="false"></activity>
         <activity
             android:name=".Login"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-    </activity>
+
+        </activity>
         <activity
             android:name=".Main"
             android:exported="false">
-
 
         </activity>
     </application>
