--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,20 +16,27 @@
         android:theme="@style/Theme.TeknoLost"
         tools:targetApi="31">
         <activity
+            android:name=".DetailActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ItemList"
+            android:exported="false"></activity>
+        <activity
             android:name=".SplashPage"
             android:exported="false" />
         <activity
             android:name=".Register"
-            android:exported="false"></activity>
+            android:exported="false" />
         <activity
             android:name=".Login"
             android:exported="true">
+
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
         <activity
             android:name=".Main"
